--- a/style.css
+++ b/style.css
@@ -9,35 +9,81 @@
 }
 
 */
-   
+
 * {
-    outline: 1px solid red !important; /* for troubleshooting */
+    /* outline: 1px solid red !important; for troubleshooting */
+    margin: 1px;
+    border: red solid 1px; 
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
+
 body {
- 	  display: flex;
- 	  min-height: 100vh;
- 	  flex-direction: row;
-  	margin: 0;
+ 	display: flex;
+ 	flex-direction: row;
+/*  	margin: 0; */
 }
+
+/*
+div {
+    outline: 1px solid red;
+}
+*/
+/*
 article, nav {
     padding: 1em;
 }
+*/
+h1 { 
+    font-family:Georgia,serif;
+    color:#4E443C;
+    font-variant: small-caps; 
+    text-transform: none; 
+    font-size: 30px;
+    font-weight: 100; 
+    margin-bottom: 0;
+ /*   font-family: Helvetica, sans-serif; 
+    font-size: 40px; 
+    font-weight: 100; 
+    */
+}
 
+h2 { 
+    font-family:Georgia,serif;
+    color:#4E443C;
+ /*   font-variant: small-caps; */
+    text-transform: none; 
+    font-weight: 100; 
+    margin-bottom: 0;
+  /*  font-family: Helvetica, sans-serif; 
+    font-size: 30px; 
+    font-weight: 100; */
+}
+
+p,ul {
+ /*   font-family: 'Calibri', sans-serif; 
+    font-size: 18px; 
+    line-height: 26px; 
+    text-indent: 30px; 
+    margin: 1;*/
+    font-family: "Helvetica Neue", "Lucida Grande", Helvetica, Arial, Verdana, sans-serif;
+    font-size: 14px;
+    margin-top: 1em;
+    color: #666;
+}
+/*
+#whatis {
+    background-image: url(images/picture.jpg);
+    background-size: contain;
+}
+*/
 .navigation {
-    background: #5499c7;
+    background: #5499C7;
   	flex: 1;
 }
 .content {
-    background: #ebf5fb;
-    display: flex;
-    flex-direction: column;
+    background: #EBF5FB;
     flex: 4;
 }
-.content > article {
-}
-
-
