--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
 
 * {
     /* outline: 1px solid red !important; for troubleshooting */
-    margin: 1px;
-    border: red solid 1px; 
+   /* margin: 1px;
+    border: red solid 1px; */
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
@@ -23,7 +23,7 @@
 body {
  	display: flex;
  	flex-direction: row;
-/*  	margin: 0; */
+	margin: 2;
 }
 
 /*
@@ -31,11 +31,11 @@ div {
     outline: 1px solid red;
 }
 */
-/*
+
 article, nav {
     padding: 1em;
 }
-*/
+
 h1 { 
     font-family:Georgia,serif;
     color:#4E443C;
